# gui

./: .gitignore  .gitmodules  .smithers-plan.md  AGENTS.md  AgentProtocol.swift  AgentService.swift  AgentsView.swift  AncestorErrorIndex.swift  AppLogger.swift  ApprovalsView.swift  BootstrapStage.swift  BrowserSurfaceView.swift  CONTRIBUTING.md  CWDResolver.swift  ChangesView.swift  ChatBlockFilter.swift  ChatBlockMerger.swift  ChatBlockRenderer.swift  ChatContentText.swift  ChatMarkdownSegmenter.swift  ChatPrivacyRedactor.swift  ChatTranscriptSearch.swift  ChatView.swift  CodexMCPStatus.swift  CodexModelSelection.swift  CommandPaletteModel.swift  CommandPaletteView.swift  ContentView.swift  DashboardView.swift  DateFormatters.swift  DefaultTabPicker.swift  DetailRouter.swift  DevTelemetryRecorder.swift  DevTelemetryStore.swift  DevToolsCLITransport.swift  DevToolsClientError.swift  DevToolsModels.swift  DeveloperDebugView.swift  DiffFileView.swift  DiffHunkView.swift  (+108 more)
.smithers/: .gitignore  agents-internal.ts  agents.ts  package.json  parsing.ts  pnpm-lock.yaml  routing.ts  tsconfig.json
CCodexFFI/: codex_ffi.h  module.modulemap
CGhosttyKit/: ghostty_umbrella.h  module.modulemap
CSmithersKit/: CSmithersKit.h  module.modulemap
Shared/: Package.swift
SmithersGUI.xcodeproj/: project.pbxproj
Tabmonsters.xcodeproj/: project.pbxproj
agent/: __init__.py  agent.py  browser_client.py  registry.py  task_executor.py  wrapper.py
codex-ffi/: Cargo.toml
codex-ffi/src/: lib.rs
config/: __init__.py  main_config.py
core/: __init__.py  events.py  exceptions.py  (+4 more)
(+1185 files in other folders)
