[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
    "gitpython>=3.1.45",
    "pydantic-ai[mcp]>=0.1.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "mcp-server-shell>=0.1.0",
    "ddgs>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "config*", "core*", "plugins*", "server*", "snapshot*"]
