[workspace]

[package]
name = "codex-ffi"
version = "0.0.0"
edition = "2024"

[lib]
name = "codex_ffi"
crate-type = ["staticlib"]

[dependencies]
codex-core     = { path = "../codex/codex-rs/core" }
codex-exec     = { path = "../codex/codex-rs/exec" }
codex-common   = { path = "../codex/codex-rs/common" }
codex-protocol = { path = "../codex/codex-rs/protocol" }
codex-ollama   = { path = "../codex/codex-rs/ollama" }
mcp-types      = { path = "../codex/codex-rs/mcp-types" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1"
dirs = "6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
toml = "0.9.5"

icu_provider = { version = "=2.0.0", features = ["sync"] }
icu_decimal = "=2.0.0"
icu_locale_core = "=2.0.0"
